...

  @override
  Widget build(BuildContext context) {
    final l10n = context.aonwL10n;
    return DropdownButtonHideUnderline(
      child: DropdownButton<WindowMode>(
        key: const ValueKey('window-mode-setting'),
        value: controller.settings.mode,
        isExpanded: true,
        itemHeight: null,
        style: Theme.of(context).textTheme.bodyLarge,
        items: [
          for (final mode in WindowMode.values)
...
